fix(MapCard): set YouTube icon z-index to 0 to prevent overlapping menus

--- a/src/components/Pages/Maps/MapCard/MapCard.module.scss
+++ b/src/components/Pages/Maps/MapCard/MapCard.module.scss
@@ -175,7 +175,7 @@
   width: 24px;
   height: 24px;
   position: relative;
-  z-index: 1;
+  z-index: 0;
   margin-top: 2px;
 }
 
